[build-system]
requires = ["numpy>=2.0","cython >=3.0","setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "radius-clustering"
version = "1.0.0"
description = "A Clustering under radius constraints algorithm using minimum dominating sets"
readme = "README.md"
maintainers = [
    {name = "Haenn Quentin", email="quentin.haenn@ensma.fr"},
]
dependencies = [
    "matplotlib>=3.6.2",
    "numpy>=1.23",
    "scikit-learn>=1.2.2",
    "scipy>=1.12.0",
]

requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers=[
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: C",
  "Programming Language :: C++",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
keywords = ["Unsupervised learning","clustering", "minimum dominating sets","clustering under radius constraint"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "cython>=3.0",
    "setuptools>= 61.0",
    "black>=24.3.0",
    "ruff>=0.4.8",
    "sphinx>=8.1.3",
    "sphinx_gallery>=0.18.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-rtd-theme>=3.0.0",
    "sphinx-prompt>=1.9.0",
    "sphinx_design>=0.6.1",
]

doc = [
    "sphinx>=8.1.3",
    "sphinx_gallery>=0.18.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-rtd-theme>=3.0.0",
    "sphinx-prompt>=1.9.0",
    "sphinx_design>=0.6.1",
]

[tool.setuptools]
packages = ["radius_clustering"]

[tool.ruff.lint]
select = ["NPY201"]